syntax = "proto3";

package karps.core;

import "graph.proto";
import "computation.proto";

service KarpsMain {
  rpc CreateSession (CreateSessionRequest) returns (CreatesSessionResponse);
  
  rpc CreateComputation (CreateComputationRequest) returns (CreateComputationResponse);
  
  rpc ComputationStatus (ComputationStatusRequest) returns (ComputationStatusResponse);
  
  rpc ResourceStatus (ResourceStatusRequest) returns (ResourceStatusResponse);
  
};


message CreateSessionRequest {
  SessionId requested_session = 1;
};

message CreatesSessionResponse {};

message CreateComputationRequest {
  SessionId session = 1;
  ComputationId requested_computation = 2;
  Graph graph = 3;
};

message CreateComputationResponse {};

message ComputationStatusRequest {
  SessionId session = 1;
  ComputationId computation = 2;
  repeated Path requested_paths = 3;
  
};

message ComputationStatusResponse {
  repeated ComputationResult all_status = 1;
};

message ResourceStatusRequest {
  SessionId session = 1;
  repeated ResourcePath resources = 2;
};

message ResourceStatusResponse {
  message Status {
    ResourcePath path = 1;
  }
  repeated Status all_status = 1;
};
